# DCNN

./: .clang-tidy  .dockerignore  .env  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TODO  build.ps1  build.sh  cifar100_cnn_trainer.cpp  cifar10_cnn_trainer  cifar10_cnn_trainer.cpp  cifar10_cnn_trainer_v2.cpp  cmake_install.cmake  compile_flags.txt  distributed_pipeline_docker.cpp  distributed_pipeline_example  distributed_pipeline_example.cpp  docker-compose.yml  docker_start.sh  entry_point.sh  env-example  flake.nix  main.cpp  mnist_cnn_pipeline_trainer  mnist_cnn_pipeline_trainer.cpp  mnist_cnn_test  mnist_cnn_test.cpp  mnist_cnn_trainer.cpp  mnist_trainer.cpp  network_worker  network_worker_main.cpp  pipeline_test  pipeline_test.cpp  profile.json  (+10 more)
benchmarks/: CMakeLists.txt  compression_test.cpp  gemm_benchmark.cpp  gemm_cache.cpp  gemm_test.cpp  im2col_test.cpp  reserve_test.cpp  resize_test.cpp  serialization_benchmark.cpp  serialization_test.cpp  tensor_test.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake  ExecutableFunctions.cmake  FindCUDA.cmake  LinkCUDA.cmake  LinkMKL.cmake  LinkOpenMP.cmake  LinkTBB.cmake  Utils.cmake
docs/: MKL_INTEGRATION.md  data_augmentation.md  pipeline_architecture.md  sequential_usage.en.md  tensor_usage.md
documentation/: TODO.md  Tensor.md  pipeline_architecture.md  sequential_usage.vi.md
example_models/: cifar10_cnn_model.json  mnist_cnn_model.json  pytorch_mnist_cnn_model.pth
examples/: CMakeLists.txt  README.md  cifar100_cnn_trainer.cpp  cifar10_cnn_trainer.cpp  cifar10_cnn_trainer_v2.cpp  cifar10_resnet18.cpp  cifar10_resnet9.cpp  coordinator_tiny_imagenet.cpp  cpu_info_test.cpp  cpu_logger.cpp  cuda_vs_avx2_comparison.cpp  device_manager_example.cpp  device_ptr_example.cu  hardware_info_example.cpp  load_aware_partitioner_example.cpp  microbatching_test.cpp  mnist_cnn_test.cpp  mnist_cnn_trainer.cpp  network_worker.cpp  network_worker_main.cpp  optimized_serializer_example.cpp  pipeline_test.cpp  resnet18_tiny_imagenet.cpp  resnet_example.cpp  semi_async_pipeline_coordinator.cpp  simple_cuda_example.cu  simple_cuda_test.cu  sync_pipeline_coordinator.cpp  tiny_imagenet_cnn_trainer.cpp  tiny_imagenet_resnet18.cpp  tiny_imagenet_resnet34.cpp  tiny_imagenet_resnet50.cpp  tiny_imagenet_visual_check.cpp  torch_cifar10_trainer.py  torch_mnist_trainer.py  torch_tiny_imagenet_trainer.py  uji_ips_trainer.cpp  visualize_cifar10_architecture.py
layers/: activations.hpp  layer.hpp  layers.hpp  optimizers.hpp  sequential.hpp  tensor_layers.hpp
layers_v2/: advanced_tensor_activations.hpp  tensor_sequential.hpp
matrix/: matrix.hpp
model_snapshots/: cifar10_cnn_classifier_v2.json  mnist_cnn_model.json
nn/: activations.hpp  instantiations.cpp  layers.hpp  loss.hpp  optimizers.hpp  parallel_for.hpp  sequential.hpp
pipeline/: command_type.hpp  communication.hpp  distributed_coordinator.hpp  message.hpp  network_serialization.hpp  network_stage_worker.hpp  pipeline_communicator.hpp  pipeline_coordinator.hpp  pipeline_endpoint.hpp  pipeline_orchestrator.hpp  pipeline_stage.hpp  task.hpp  tcp_communicator.hpp  thread_pool.hpp
pipeline_experimental/: TODO.md  command_type.hpp  communication.hpp  in_process_pipeline_communicator.tpp  message.hpp  message_handler.hpp  pipeline_architecture.md  pipeline_communicator.hpp  pipeline_coordinator.hpp  pipeline_coordinator_example.hpp  pipeline_endpoint.hpp  pipeline_orchestrator.hpp  pipeline_stage.hpp  task.hpp  thread_pool.hpp
src/: CMakeLists.txt  cpu_info.cpp  cpu_logger.cpp  data_loading.cpp  hardware_info.cpp  instantiations.cpp  math.cpp  matrix.cpp  nn.cpp  pipeline.cpp  pipeline.pb.cc  pipeline.pb.h  tensor.cpp  utils.cpp
src/cuda/: kernels.cu  tensor_kernels.cu
src/device/: device.cpp  device_manager.cpp
src/device/contexts/: cpu_context.cpp  cuda_context.cpp
src/math/: dgemm.cpp  gemm.cpp  sgemm.cpp
src/math/cpu/: dgemm.cpp  sgemm.cpp
src/math/cuda/: gemm.cu
src/nn/: nn.cpp
src/nn/activations_impl/: elu.cpp  leaky_relu.cpp  linear.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/nn/activations_impl/cpu/: elu_kernels.cpp  leaky_relu_kernels.cpp  relu_kernels.cpp  sigmoid_kernels.cpp  softmax_kernels.cpp  tanh_kernels.cpp
src/nn/activations_impl/cuda/: elu_kernels.cu  leaky_relu_kernels.cu  relu_kernels.cu  sigmoid_kernels.cu  softmax_kernels.cu  tanh_kernels.cu
src/nn/layers_impl/: activation_layer.cpp  batchnorm_layer.cpp  conv2d_layer.cpp  dense_layer.cpp  dropout_layer.cpp  flatten_layer.cpp  maxpool2d_layer.cpp  parameterized_layer.cpp
src/nn/layers_impl/cpu/: avgpool_ops.cpp  batchnorm_ops.cpp  conv2d_ops.cpp  dense_ops.cpp  dropout.cpp  groupnorm_ops.cpp  maxpool_ops.cpp
src/nn/layers_impl/cuda/: avgpool_ops.cu  batchnorm_ops.cu  conv2d_ops.cu  cudnn_conv2d_ops.cu  dense_ops.cu  dropout.cu  groupnorm_ops.cu  maxpool_ops.cu
src/nn/loss_impl/cpu/: loss_ops.cpp
src/nn/loss_impl/cuda/: loss_ops.cu
src/nn/optimizers_impl/cpu/: adam_kernels.cpp  sgd_kernels.cpp
src/nn/optimizers_impl/cuda/: adam_kernels.cu  sgd_kernels.cu
src/ops/cpu/: dkernels.cpp  skernels.cpp
src/ops/cuda/: kernels.cu
src/pipeline/: pipeline.cpp
src/tensor/: tensor.cpp
src/tensor/cuda/: tensor_ops.cpp
src/utils/: hardware_info.cpp  thread_affinity.cpp  utils.cpp
src/utils/accuracy_impl/cpu/: accuracy.cpp
src/utils/accuracy_impl/cuda/: accuracy.cu
tensor/: tensor.hpp  (+2 more)
unit_tests/: CMakeLists.txt  activation_tests.cpp  avgpool_layer_test.cpp  batchnorm_layer_test.cpp  conv2d_layer_test.cpp  cuda_batchnorm_ops_test.cpp  cuda_conv2d_ops_test.cpp  cuda_dense_ops_test.cpp  cuda_kernels_test.cpp  cuda_loss_funcs_test.cpp  cuda_maxpool_ops_test.cpp  dense_layer_test.cpp  device_manager_test.cpp  gpu_tensor_ops_test.cpp  gpu_tensor_test.cpp  groupnorm_layer_test.cpp  hello_world_test.cpp  layer_buffer_reuse_test.cpp  layer_device_agnosticity_test.cpp  layer_integration_test.cpp  maxpool2d_layer_test.cpp  residual_block_test.cpp  sequential_residual_block_test.cpp  tensor_test.cpp  tiny_imagenet_loader_test.cpp
(+240 files in other folders)
